# utm-helper-mcp

./: .env.example  .gitignore  GUIDE.md  README.md  pyproject.toml  utm-spec.yaml
src/utm_server/: campaigns.py  config.py  engine.py  server.py  sources.py  spec.py
tests/: test_campaigns.py  test_config.py  test_engine.py  test_server.py  test_sources.py  test_spec.py
